# my-pedalboard

./: .clang-format  .gitignore  .gitmodules  .qml-style.xml  CMakeLists.txt  Main.qml  README.md  main.cpp
Control/: AudioControl.cpp  AudioControl.h  CMakeLists.txt  RegisterControlTypes.cpp  RegisterControlTypes.h  RegisterTypes.cpp  RegisterTypes.h
Control/Molecules/: NavigationBarControl.cpp  NavigationBarControl.h
Control/Pages/: HomePageControl.cpp  HomePageControl.h
Core/: CMakeLists.txt  RegisterTypes.cpp  RegisterTypes.h  Singleton.h
Core/Audio/: AudioDeviceManager.cpp  AudioDeviceManager.h  AudioEngine.cpp  AudioEngine.h  AudioInputManager.cpp  AudioInputManager.h  AudioManager.cpp  AudioManager.h  AudioOutputManager.cpp  AudioOutputManager.h  CMakeLists.txt
Engine/: CMakeLists.txt  RegisterEngineTypes.cpp  RegisterEngineTypes.h  Singleton.h
Engine/Audio/: AudioEngine.cpp  AudioEngine.h  AudioWorker.cpp  AudioWorker.h  CMakeLists.txt
QML/: ApplicationWindow.qml  CMakeLists.txt
QML/Atoms/: ButtonIcon.qml  ButtonIconDesign.ui.qml  ButtonText.qml  CMakeLists.txt  Colors.qml  ColorsDark.qml  ColorsLight.qml  ComboBoxCustom.qml  Spaces.qml
QML/Molecules/: CMakeLists.txt  LevelBar.qml  NavigationBar.qml  NavigationBarDesign.ui.qml
QML/Organisms/: AudioInputPanel.qml  AudioInputPanelDesign.ui.qml  AudioOutputPanel.qml  AudioOutputPanelDesign.ui.qml  BottomBar.qml  CMakeLists.txt  NavigationBar.qml  NavigationBarDesign.ui.qml  PanelBottom.qml  StatusPanel.qml  StatusPanelDesign.qml  TopBar.qml
QML/Pages/: AboutPage.qml  AboutPageDesign.ui.qml  CMakeLists.txt  HomePage.qml  HomePageDesign.ui.qml  SettingsPage.qml
QML/Theme/: CMakeLists.txt  Colors.qml  Icons.qml  Radius.qml  Spacing.qml
Translations/: CMakeLists.txt  my-pedalboard_en_US.ts
assets/: CMakeLists.txt
cmake/: CMakeLibraryConfiguration.cmake  CMakeQMLModuleConfiguration.cmake  CMakeQt5.cmake  CMakeQt5QmlModule.cmake  CMakeQt6.cmake  CMakeQt6QmlModule.cmake
control/: CMakeLists.txt
core/: CMakeLists.txt  registertypes.cpp
core/Audio/: AudioManager.cpp  AudioManager.h  AudioSource.h  AudioSourceFileInput.cpp  AudioSourceFileInput.h  AudioSourceLiveInput.cpp  AudioSourceLiveInput.h  AudioSourceType.h  CMakeLists.txt
core/Bridge/: CMakeLists.txt
core/Effects/: CMakeLists.txt  Effect.h
core/audio/: CMakeLists.txt  audioinputmanager.cpp  audiooutputmanager.cpp
qml/: CMakeLists.txt  main.qml
qml/Atoms/: ButtonIcon.qml  ButtonIconDesign.ui.qml  CMakeLists.txt  Colors.qml  ColorsDark.qml  ColorsLight.qml
qml/Colors/: CMakeLists.txt  Colors.qml  qmldir
qml/Components/: ArcMeter.qml  CMakeLists.txt  Knob.qml  KnobDesign.ui.qml  components.cpp  components.h  qmldir
qml/Components/Fonts/: Fonts.qml
qml/Components/Knobs/: BasicKnob.qml  BasicKnobDesign.ui.qml  MeterKnob.qml  MeterKnobDesign.ui.qml
qml/Components/Meters/: ArcMeter.qml  ArcMeterDesign.ui.qml
qml/Constants/: CMakeLists.txt  Fonts.qml  qmldir
qml/Constants/Colors/: Colors.qml
qml/Fonts/: CMakeLists.txt  qmldir
qml/Main/: CMakeLists.txt
qml/Molecules/: CMakeLists.txt
qml/Organisms/: AudioInputPanel.qml  AudioOutputPanel.qml  AudioOutputPanelDesign.ui.qml  CMakeLists.txt  TopBar.qml  TopBarDesign.ui.qml
qml/Pages/: CMakeLists.txt  HomePage.qml  PageHome.qml  PageHomeDesign.ui.qml  PageSettings.qml  PageSettingsDesign.ui.qml
qml/Radiuses/: CMakeLists.txt  Radiuses.qml  qmldir
qml/Screens/: CMakeLists.txt  qmldir
qml/component/: CMakeLists.txt  Knob.qml  KnobDesign.ui.qml  Pedal.qml  PedalDesign.ui.qml  qmldir
qml/constant/: CMakeLists.txt  Colors.qml  qmldir
qml/main/: CMakeLists.txt  main.qml  qmldir
qml/screen/: CMakeLists.txt  qmldir
translations/: CMakeLists.txt  my-pedalboard_en_US.ts  my-pedalboard_pt_BR.ts
